istio/demo/traffic-management/request-timeout/virtual-service-ratings-test-v1-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - route:
        - destination:
            host: ratings
            subset: v1
      fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 1s
